Set overflow-wrap: break-word to fix [SEE ALSO] link overflow

--- a/theme/default/style.css
+++ b/theme/default/style.css
@@ -252,6 +252,9 @@ td.library {
     dd {
         margin: 0.3em 0em 1em 1em;
     }
+    p {
+        overflow-wrap: break-word;
+    }
 }
 
 a {
